<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customLayout"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/primary_blue"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_description"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_il_name_hint"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:boxStrokeColor="@color/primary_blue"
        app:hintTextColor="@color/primary_blue"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilEmailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_il_email_hint"
        app:boxStrokeColor="@color/primary_blue"
        app:hintTextColor="@color/primary_blue"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_error_message"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/ilEmailContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_bt_ok"
        app:backgroundTint="@color/secondary_green"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        app:layout_constraintStart_toEndOf="@id/btCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvErrorMessage"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        app:backgroundTint="@android:color/holo_red_light"
        android:text="@string/dialog_bt_cancel"
        app:layout_constraintEnd_toStartOf="@+id/btSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvErrorMessage"/>


</androidx.constraintlayout.widget.ConstraintLayout>