<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:background="@color/background_loading_color"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="loading-blue.json"/>

    <ScrollView
        android:id="@+id/svContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivEventImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_300dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@color/black"
                android:contentDescription="@string/cd_event_image"
                />

            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_10dp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:text="@string/tv_event_title"
                />

            <TextView
                android:id="@+id/tvEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:drawablePadding="@dimen/dimen_5dp"
                android:gravity="center_vertical"
                android:text="@string/tv_event_date_hint"
                android:drawableLeft="@drawable/ic_baseline_event_24"
                />

            <TextView
                android:id="@+id/tvEventPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:drawablePadding="@dimen/dimen_5dp"
                android:gravity="center_vertical"
                android:text="@string/tv_event_price_hint"
                android:drawableLeft="@drawable/ic_baseline_monetization_on_24"
                />


            <TextView
                android:id="@+id/tvEventLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:drawablePadding="@dimen/dimen_5dp"
                android:gravity="center_vertical"
                android:text="@string/tv_event_location"
                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                />

            <TextView
                android:id="@+id/tvEventAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_margin="@dimen/dimen_10dp"
                android:drawablePadding="@dimen/dimen_5dp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:text="@string/tv_about_event"
                />


            <TextView
                android:id="@+id/tvEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:layout_toRightOf="@+id/icon_bio"
                android:gravity="center_vertical"
                android:text="@string/tv_event_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btCheckIn"
                style="@style/Widget.Material3.Button.IconButton"
                android:maxLines="1"
                android:textSize="@dimen/text_dimen_15sp"
                app:icon="@drawable/ic_baseline_check_in"
                app:iconGravity="end"
                android:textColor="@color/primary_blue"
                app:iconPadding="@dimen/dimen_10dp"
                app:iconTint="@color/primary_blue"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_54dp"
                android:layout_marginHorizontal="@dimen/dimen_24dp"
                android:text="@string/bt_do_check_in"/>

        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>