<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/dimen_24dp"
    android:paddingVertical="@dimen/dimen_10dp"
    android:layout_marginHorizontal="@dimen/dimen_10dp"
    android:layout_marginVertical="@dimen/dimen_5dp"
    android:animateLayoutChanges="true"
    android:elevation="@dimen/dimen_5dp"
    android:background="@drawable/background_dummy_cl"
    android:id="@+id/eventItem"
    tools:ignore="UnusedAttribute">


    <ImageView
        android:id="@+id/eventImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_resource_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/cd_event_image"/>

    <TextView
        android:id="@+id/eventName"
        android:layout_width="0dp"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content"
        android:text="@string/tv_event_title"
        android:layout_marginStart="@dimen/text_dimen_18sp"
        app:layout_constraintStart_toEndOf="@id/eventImage"
        app:layout_constraintBottom_toTopOf="@id/eventDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/eventDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_event_date_hint"
        android:textSize="@dimen/text_dimen_15sp"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:drawablePadding="@dimen/dimen_5dp"
        android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintStart_toEndOf="@id/eventImage"
        app:layout_constraintTop_toBottomOf="@id/eventName"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/eventPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_event_price_hint"
        android:gravity="left|center_vertical"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:maxLines="1"
        android:drawableLeft="@drawable/ic_baseline_monetization_on_24"
        android:drawablePadding="@dimen/dimen_5dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        app:layout_constraintStart_toEndOf="@id/eventDate"
        app:layout_constraintTop_toBottomOf="@id/eventName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>