<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="gone"
    android:id="@+id/clErrorView">

    <ImageView
        android:id="@+id/ivErrorViewIcon"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_200dp"
        android:contentDescription="@string/error_view_cd_image"
        android:src="@drawable/ic_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvErrorViewText"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tvErrorViewText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textSize="@dimen/text_dimen_15sp"
        android:layout_marginHorizontal="@dimen/dimen_54dp"
        android:gravity="center"
        android:text="@string/error_view_message_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@id/btTryAgain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivErrorViewIcon"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btTryAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/primary_blue"
        android:text="@string/error_view_bt_text"
        android:layout_marginBottom="@dimen/dimen_54dp"
        android:layout_marginHorizontal="@dimen/dimen_54dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>